[tool.poetry]
name = "corona-dash"
version = "0.1.0"
description = ""
authors = ["mwachala3000 <paulmwachala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
matplotlib = "*"
python-dotenv = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
